<resources>
    <string name="app_name" translatable="false">Work Order Executor</string>
    <string name="facebook_app_id" translatable="false">566428013549380</string>
    <string name="title_activity_maps">Map</string>
    <string name="count_comment">(/200 carácteres)</string>
    <string name="count_chofer_name">(/100 carácteres)</string>
    <string name="count_plate_car">(/20 carácteres)</string>
    <string name="count_brand_car">(/50 carácteres)</string>
    <string name="count_model_car">(/50 carácteres)</string>
    <string name="tag_chofer_name">Nombre del chofer:</string>
    <string-array name="periodos_array">
    <item>Ultimos 7 dias</item>
    <item>Ultimas 2 semanas</item>
        <item>Ultimo mes</item>
        <item>Ultimos 6 meses</item>

</string-array>
    <string-array name="unidadmedida_array">
        <item>Seleccione</item>
        <item>Kilogramos</item>
        <item>Gramos</item>
        <item>Litros</item>
        <item>Unidades</item>
        <item>Cajas</item>
        <item>Bolsas</item>
        <item>Sacos</item>
    </string-array>
    <string-array name="estadovisto_array">
        <item>ESTADO VISTO</item>
        <item>0</item>
        <item>1</item>
        <item>T</item>
    </string-array>
    <string-array name="ordenar_array">
        <item>ORDENAR</item>
        <item>ASC</item>
        <item>DESC</item>
    </string-array>
    <string-array name="condiciones_array">

        <item>CONTADO</item>
        <item>CREDITO 30 DIAS</item>
    </string-array>
    <string-array name="moneda_array">

        <item>Soles S/</item>
        <item>Dolares Americanos US$</item>
    </string-array>
    <string name="menu_settings">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="button0">0</string>
    <string name="button1">1</string>
    <string name="button2">2</string>
    <string name="button3">3</string>
    <string name="button4">4</string>
    <string name="button5">5</string>
    <string name="button6">6</string>
    <string name="button7">7</string>
    <string name="button8">8</string>
    <string name="button9">9</string>
    <string name="buttonAdd">+</string>
    <string name="buttonSubtract">-</string>
    <string name="buttonMultiply">*</string>
    <string name="buttonDivide">/</string>
    <string name="buttonToggleSign">+/-</string>
    <string name="buttonDecimalPoint">.</string>
    <string name="buttonEquals">=</string>
    <string name="buttonClear">C</string>
    <string name="buttonClearMemory">MC</string>
    <string name="buttonAddToMemory">M+</string>
    <string name="buttonSubtractFromMemory">M-</string>
    <string name="buttonRecallMemory">MR</string>
    <string name="buttonSquareRoot">√</string>
    <string name="buttonSquared">x²</string>
    <string name="buttonInvert">1/x</string>
    <string name="buttonSine">sin</string>
    <string name="buttonCosine">cos</string>
    <string name="buttonTangent">tan</string>
    <string name="menuHome">Inicio</string>
    <string name="menuVouchers">Comprobantes</string>
    <string name="menuExpenses">Gastos</string>
    <string name="menuInventary">Inventario</string>
    <string name="menuContacts">Contactos</string>
    <string name="menuCloseSession">Cerrar Sesión</string>
    <string name="menuFacturas">Facturas</string>
    <string name="menuBoletas">Boletas</string>
    <string name="menuCotizacion">Cotización</string>
    <string name="menuNotaDeVenta">Nota de Venta</string>
    <string name="menuCLients">Clientes</string>
    <string name="menuProviders">Proveedores</string>
    <string name="menuExpenseType">Tipos Gasto</string>
    <string name="menuWarehouses">Almacenes</string>
    <string name="menuCategories">Categorias</string>
    <string name="menuAssets">Productos</string>
    <string name="menuMovements">Movimientos</string>
    <string name="menuStock">Stock</string>
    <string name="clientAdd">Agregar Cliente</string>
    <string name="clientName">Nombre o razon social</string>
    <string name="homeEnterCode">Ingrese Código</string>
    <string name="homeScanner">Scanner</string>
    <string name="homeCotizacion">Cotización</string>
    <string name="homeVoucher">Comprobante</string>
    <string name="homeCalculator">Calculadora</string>
    <string name="clientEnterDocNumber">Ingrese Nro Documento</string>
    <string name="expenseEnterName">Ingrese nombre</string>
    <string name="pickWarehouseTittle">Almacén de Trabajo</string>
    <string name="pickWarehouseSubTittle">Al seleccionar un almacén, ayuda a que la información se muestre mas rápido</string>
    <string name="pickVoucherBoleta">Boleta</string>
    <string name="pickVoucherFactura">Factura</string>
    <string name="pickVoucherNotaDeVenta">Nota de Venta</string>
</resources>